--- a/rooms/pinkieshideout.html
+++ b/rooms/pinkieshideout.html
@@ -1,16 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
+<!DOCTYPE html><!--Recoding and cleaning during phase 4 mostly just removing clutter and making everything look clean.-->
+<html lang="en"><!--Indicating the HTML language-->
+	<head><!--Head section-->
+	<!--Meta tags-->
 	<title>Stay-xolotl B&B Pinkie's Hideout</title>
 		<meta charset="utf-8">
-		<link href="../styles/styles.css" rel="stylesheet">
-	</head>
-	<body>
-		<div id="wrapper">
-	<header>
+		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+	
+		<meta name="description" content="Axolotl-themed bed & breakfast with pastel rooms, fresh breakfast, friendly axolotls, garden pond & hot tub. Perfect family or couples retreat!">
+		
+		<link href="../styles/styles.css" rel="stylesheet"><!--Styles link-->
+		
+	</head><!--End Head-->
+	
+	<body><!--Body Section-->
+	
+		<div id="wrapper"><!--Wrapper Style Div-->
+		
+	<header><!--Header Section-->
+	
 		<h1>Stay-xolotl B&B</h1>
-	</header>
-	<nav> <!-- Starts the navigation section to place links to other pages and content in the site-->
+		
+	</header><!--End Header-->
+	
+	<nav> 
+		<button class="hamburger" aria-label="Toggle menu">Menu</button> <!-- Button for Dropdown Navigation Menu-->
+            <div class="nav-desktop" id="navMenu"><!--Div Ids for desktop mode Navigation Menu-->
 		<!-- I removed some elements of template code to display the navigation horizontally-->
 		<!-- These are the links to the pages of my webpage-->
 		<a href="../index.html">Home</a> 
@@ -31,11 +46,14 @@
 		<a href="../events/weekend.html">Weekend Events</a> 
 		<a href="../contact.html">Contact</a>
 	</nav><!-- Ends the link list for navigation section -->
-	<main>
+	
+	<main><!--Start Main-->
+	
 		<!-- Image is configured to show on the right of the text-->
-		<div id="pinkieshideout" role="img" title="Shows a pink style decorated room with a pink axolotl stuffed animal on the bed and has a window with lighting">
-		</div>
+		<img src="../images/pinkieshideouti.png" class="responsive" alt="Shows a pink style decorated room with a pink axolotl stuffed animal on the bed and has a window with lighting" >
+		
 		<h3>Pinkie's Hideout</h3>
+		<br class="clear">
 		<p>This room is perfect for a light and relaxing atmosphere, adjacent to the common room and is closest to the front door.</p>
 			<ul>
 				<li>Perfect for in and out vacationers or business trips</li>
@@ -46,13 +64,19 @@
 				<li>Price per night $60</li>
 				<li>Per Week $400</li>
 			</ul>
+			
 	</main> <!-- Indicates the end of the main section -->
+	
 	<footer> <!-- Indicates the start of footer section-->
-		<div id="logo" role="img" title="Shows the logo of a happy axolotl">
-		</div>
+	
+		<img src="../images/bnblogo.png" alt="Shows the logo of a happy axolotl"
+		height="50" width="50"> 
 		Copyright &copy; 2025<br> <!-- Adjusted copyright footer for per the assignment -->
 		<a href="mailto:g0557594@amarillo.college.com">Gavin Taff</a> <!-- Link to email adjusted per assignment-->
+		
 	</footer> <!-- Indicated the end of the footer section-->
+	
 	</div> <!-- Ending /div tag-->
 	</body> <!-- Body section closer tag-->
+	
 </html> <!-- End of code tag -->
