--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
     <title>Stay-xolotl B&B</title>
 	
-    <link href="styles/styles.css" rel="stylesheet"><!--Styles link-->
+	<link href="styles/styles.css" rel="stylesheet"><!--Styles link-->
 	
 </head><!--End Head-->
 
@@ -77,6 +77,14 @@
             <br class="clear">
 
             <h3>We have a beautiful garden for outdoor reading and leisure complete with a pond full of friendly axolotls</h3>
+			
+			<h2>Welcome to the Stay-Xlotl Bed & Breakfast! Please enjoy this Animated Video collection from Youtube by Creator Hypertech_505 </h2>
+			
+			<div class="video-container">
+			
+			<iframe src="https://www.youtube.com/embed/y1GcLYsWHQw"></iframe>
+			
+			</div>
 			
         </main><!--End Main-->
 
