--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 		<a href="rooms/basementactivity.html">Basement/Activity Center</a> 
 		<a href="events/weekend.html">Weekend Events</a> 
 		<a href="contact.html">Contact</a>
-  
+			</div>
 	</nav> <!-- Ends the link list for navigation section -->
 	
 	<main><!--Start Main-->
@@ -111,6 +111,16 @@
 	</footer> <!-- Indicated the end of the footer section-->
 	
 	</div> <!-- Ending /div tag-->
+	 <!-- Hamburger menu JavaScript -->
+    <script>
+        const hamburger = document.querySelector('.hamburger');
+        const navMenu = document.getElementById('navMenu');
+        if (hamburger && navMenu) {
+            hamburger.addEventListener('click', function () {
+                navMenu.classList.toggle('active');
+            });
+        }
+    </script>
 	</body> <!-- Body section closer tag-->
 	
 </html> <!-- End of code tag -->
